--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "react-social-media-embed": "^2.5.18",
     "tailwind-merge": "^3.4.0"
   },
+  "overrides": {
+    "react": "$react",
+    "react-dom": "$react-dom"
+  },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
