--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "pg": "^8.18.0",
+    "pino": "^10.3.0",
+    "pino-pretty": "^13.1.3",
     "prisma": "^7.3.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
