--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@vercel/analytics": "^1.6.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.29.2",
     "googleapis": "^171.0.0",
     "lucide-react": "^0.563.0",
